--- a/Modules/BAPT_Background.cls
+++ b/Modules/BAPT_Background.cls
@@ -8,9 +8,9 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 '###############################################################################################
-'# Copyright (c) 2021, 2022 Thomas MÃ¶ller, supported by K.D.Gundermann                         #
+'# Copyright (c) 2021, 2022 Thomas Möller, supported by K.D.Gundermann                         #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.55.06  published: 06.11.2022                                                      #
+'# Version 1.56.05  published: 07.11.2022                                                      #
 '###############################################################################################
 
 Option Compare Database
@@ -64,3 +64,4 @@ Friend Property Get ToCSS() As String
     ToCSS = strText.ToString
 
 End Property
+
